# bangdream-gpt-sovits-dataset-tool

./: .gitignore  README.md  list_generator.py  pyproject.toml  requirements.txt  story_downloader.py  voice_downloader.py
